# scotty-login-session

./: .gitignore  LoginTest.cabal  README.org  db.sqlite3  scotty-login-session.cabal  stack.yaml
docs/: Web-Scotty-Login-Session.html  doc-index.html  index-frames.html  index.html  mini_Web-Scotty-Login-Session.html  scotty-login-session.haddock  scotty-login-session.txt
docs/src/: Web-Scotty-Login-Internal-Cookies.html  Web-Scotty-Login-Internal-Model.html  Web-Scotty-Login-Session.html
examples/: Simple.hs
src/: Main.hs  Model.hs  ScottyCookie.hs  Test.hs
src/Web/Scotty/Login/: Session.hs
src/Web/Scotty/Login/Internal/: Cookies.hs  Model.hs
static/: login.html
test/: Test.hs
test/Web/: SLSSpec.hs
