name:                LoginTest
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/WebMain#readme
license:             BSD3
license-file:        LICENSE
author:              Example Author Name
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable WebMain
  hs-source-dirs:      src
  main-is:             Main.hs
--  other-modules:       Pages
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , scotty
                     , blaze-html
                     , text
                     , transformers
                     , mtl
                     , persistent
                     , persistent-template
                     , persistent-sqlite
                     , random
-- temporary
                     , scotty-cookie

--                     , containers
