name:                LoginTest
version:             0.1.0.0
synopsis:            Test for scotty sessions
description:         Please see README.md (does not exist)
-- homepage:            http://github.com//WebMain#readme
license:             BSD3
-- license-file:        LICENSE
author:              Miles Frankel
maintainer:          miles.frankel@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable LoginTest
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Model, ScottyCookie
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , scotty
                     , blaze-html
                     , text
                     , transformers
                     , mtl
                     , persistent
                     , persistent-template
                     , persistent-sqlite
                     , random
                     , http-types
-- for cookies
                     , blaze-builder
                     , bytestring
                     , containers
                     , cookie
                     , time
-- temporary
--                     , scotty-cookie

--                     , containers
