name:                scotty-login-session
version:             0.1.0.0
synopsis:            Test for scotty sessions
description:         Please see README.md (does not exist)
-- homepage:            http://github.com//WebMain#readme
license:             BSD3
-- license-file:        LICENSE
author:              Miles Frankel
maintainer:          miles.frankel@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

Library
  hs-source-dirs:      src, src/Web/Scotty/Login, src/Web/Scotty/Login/Internal
  ghc-options:         -O2 -threaded -Wall
  exposed-modules:     Session
  other-modules:       Model, Cookies
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , scotty >= 0.10.2
                     , text
                     , transformers >= 0.3
                     , mtl
                     , persistent
                     , persistent-template
                     , persistent-sqlite
                     , random
                     , cookie
                     , time >= 1.4
                     , scotty-cookie
