name:                scotty-login-session
version:             0.1.0.0
synopsis:            Test for scotty sessions
description:         Please see README.md (does not exist)
-- homepage:            http://github.com//WebMain#readme
license:             BSD3
-- license-file:        LICENSE
author:              Miles Frankel
maintainer:          miles.frankel@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10


Library
  hs-source-dirs:      src
  ghc-options:         -Wall -fno-warn-unused-do-bind
  exposed-modules:     Web.Scotty.Login.Session
  other-modules:       Web.Scotty.Login.Internal.Model, Web.Scotty.Login.Internal.Cookies
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , scotty >= 0.10.2
                     , text
                     , transformers >= 0.3
                     , persistent
                     , persistent-template
                     , persistent-sqlite
                     , cookie
                     , time >= 1.4
                     , scotty-cookie
                     , cryptonite
                     , bytestring
                     , monad-logger
                     , resourcet
                     , stm

executable Test
  hs-source-dirs:      src
  ghc-options:         -Wall
  main-is:             Test.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , scotty >= 0.10.2
                     , text
                     , transformers >= 0.3
                     , persistent
                     , persistent-template
                     , persistent-sqlite
                     , cookie
                     , time >= 1.4
                     , scotty-cookie
                     , cryptonite
                     , bytestring
                     , monad-logger
                     , resourcet
                     , stm
